<?xml version="1.0" encoding="utf-8"?>
<!--
The Likeness, Logos and text of this app are provided as reference and may not be reproduced in a derivative work
Copyright 2014 SnoopWall, Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<resources>

    <!-- General Strings -->
    <string name="app_name">PRIVACY FLASHLIGHT</string>
    <string name="url">www.snoopwall.com</string>
    <string name="old_api">ONLY AVAILABLE FOR API LEVEL HONEYCOMB AND ABOVE</string>
    <!-- settings strings -->
    <string name="auto_off_text">LED AUTO-SHUTOFF</string>
    <string name="auto_off_active">LED will shut off upon exiting Privacy Flashlight</string>
    <string name="auto_off_not_active">LED will stay on even after navigating away from Privacy Flashlight</string>

    <string name="auto_on_led_text">LED FLASHLIGHT AUTO-ON</string>
    <string name="auto_on_led_active">The LED flashlight will automatically turn on upon starting Privacy Flashlight</string>
    <string name="auto_on_led_not_active">The LED flashlight will be off upon starting Privacy Flashlight (unless already turned on)</string>

    <string name="auto_on_screen_text">SCREEN FLASHLIGHT AUTO_ON</string>
    <string name="auto_on_screen_active">The Screen flashlight will automatically turn on upon starting Privacy Flashlight</string>
    <string name="auto_on_screen_not_active">The Screen flashlight will be off upon starting Privacy Flashlight (unless already turned on)</string>

    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="save">SAVE SETTINGS</string>
    <!-- timer strings -->
    <string name="timer_text">DEFAULT SHUTOFF TIMER LENGTH</string>
    <string name="timer_title">FLASHLIGHT WILL TURN OFF IN:</string>
    <string name="timer_arrow_right">►</string>
    <string name="timer_arrow_down">▼</string>
    <string name="start_text">START</string>
    <string name="stop_text">STOP</string>
    <string name="reset_text">RESET</string>
    <string name="hours">HOURS</string>
    <string name="minutes">MINUTES</string>
    <string name="seconds">SECONDS</string>
    <string name="zero">00</string>

    <string name="header_text">
  <![CDATA[
    <i><b>PRIVACY </b> FLASHLIGHT</i>
  ]]>
</string>
</resources>
